@@ -6378,7 +6378,7 @@ name|flags
 return|;
 block|}
 block|}
-comment|/**    * Implementation of {@link FlagParsingStrategy} that assumes each flag is encoded as two ASCII characters whose codes    * must be combined into a single character.    *    * TODO (rmuir) test    */
+comment|/**    * Implementation of {@link FlagParsingStrategy} that assumes each flag is encoded as two ASCII characters whose codes    * must be combined into a single character.    */
 DECL|class|DoubleASCIIFlagParsingStrategy
 specifier|private
 specifier|static
@@ -6466,25 +6466,18 @@ literal|2
 control|)
 block|{
 name|char
-name|cookedFlag
+name|f1
 init|=
-call|(
-name|char
-call|)
-argument_list|(
-operator|(
-name|int
-operator|)
 name|rawFlags
 operator|.
 name|charAt
 argument_list|(
 name|i
 argument_list|)
-operator|+
-operator|(
-name|int
-operator|)
+decl_stmt|;
+name|char
+name|f2
+init|=
 name|rawFlags
 operator|.
 name|charAt
@@ -6493,13 +6486,47 @@ name|i
 operator|+
 literal|1
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|f1
+operator|>=
+literal|256
+operator|||
+name|f2
+operator|>=
+literal|256
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"Invalid flags (LONG flags must be double ASCII): "
+operator|+
+name|rawFlags
+argument_list|)
+throw|;
+block|}
+name|char
+name|combined
+init|=
+call|(
+name|char
+call|)
+argument_list|(
+name|f1
+operator|<<
+literal|8
+operator||
+name|f2
 argument_list|)
 decl_stmt|;
 name|builder
 operator|.
 name|append
 argument_list|(
-name|cookedFlag
+name|combined
 argument_list|)
 expr_stmt|;
 block|}
